Email In User Account plus remove task folder

--- a/cfg/the-songara-datasource.properties
+++ b/cfg/the-songara-datasource.properties
@@ -3,7 +3,9 @@
 #==================================================================#
 db.driverClassName=com.mysql.jdbc.Driver
 db.jdbc.url=jdbc:mysql://localhost:3306/the_songara?characterEncoding=UTF-8
+#db.jdbc.url=jdbc:mysql://mysql-TheSongara.whelastic.net/the_songara
 db.username=root
 db.password=root
+#db.password=5rx0vaJixj
 db.show_sql=true
-db.format_sql=true
+db.format_sql=false
